:hammer: refactor(vr): 대화 dto 수정 ## map 으로 dto로 전환 테스트 필요